@@ -2,14 +2,20 @@ if DRI
 DRI_SUBDIR = dri
 endif
 
+if BUILDDOCS
+DOC_SUBDIR = doc
+endif
+
+
 SUBDIRS = common ddc dummylib i2c x86emu int10 fbdevhw os-support parser rac \
           ramdac shadowfb vbe vgahw xaa xf1bpp xf4bpp xf8_16bpp \
-	  xf8_32bpp xf8_32wid loader scanpci dixmods exa $(DRI_SUBDIR) utils
+	  xf8_32bpp xf8_32wid loader scanpci dixmods exa $(DRI_SUBDIR) utils \
+	  $(DOC_SUBDIR)
 
 DIST_SUBDIRS = common ddc dummylib i2c x86emu int10 fbdevhw os-support \
                parser rac ramdac shadowfb vbe vgahw xaa xf1bpp xf4bpp \
                xf8_16bpp xf8_32bpp xf8_32wid loader scanpci dixmods dri exa \
-	       utils
+	       utils doc
 
 bin_PROGRAMS = Xorg
 
