@@ -1,0 +1,52 @@
+#  Copyright 2005 Red Hat, Inc.
+#
+#  Permission to use, copy, modify, distribute, and sell this software
+#  and its documentation for any purpose is hereby granted without
+#  fee, provided that the above copyright notice appear in all copies
+#  and that both that copyright notice and this permission notice
+#  appear in supporting documentation, and that the name of Red Hat
+#  not be used in advertising or publicity pertaining to distribution
+#  of the software without specific, written prior permission.  Red
+#  Hat makes no representations about the suitability of this software
+#  for any purpose.  It is provided "as is" without express or implied
+#  warranty.
+#
+#  RED HAT DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
+#  INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN
+#  NO EVENT SHALL RED HAT BE LIABLE FOR ANY SPECIAL, INDIRECT OR
+#  CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS
+#  OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
+#  NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
+#  CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+
+SGML_FILES = DESIGN.sgml
+
+TXT_FILES  = $(SGML_FILES:%.sgml=%.txt)
+PS_FILES   = $(SGML_FILES:%.sgml=%.ps)
+PDF_FILES  = $(SGML_FILES:%.sgml=%.pdf)
+HTML_FILES = $(SGML_FILES:%.sgml=%.html)
+
+SUFFIXES = .sgml .txt .html .ps .pdf
+
+if BUILDSGMLDOCS
+.sgml.txt:
+	@rm -f $@
+	GROFF_NO_SGR= $(LINUXDOC) -B txt $^
+
+.sgml.ps:
+	@rm -f $@
+	$(LINUXDOC) -B latex --papersize=letter --output=ps $^
+
+.sgml.pdf:
+	@rm -f $@
+	$(LINUXDOC) -B latex --papersize=letter --output=pdf $^
+
+.sgml.html:
+	@rm -f $@
+	$(LINUXDOC) -B html --split=0 $^
+
+noinst_DATA = $(TXT_FILES) $(PS_FILES) $(PDF_FILES) $(HTML_FILES)
+CLEANFILES = $(PS_FILES) $(PDF_FILES) $(HTML_FILES)
+endif
+
+EXTRA_DIST = $(SGML_FILES) $(TXT_FILES)
